; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_test_timer_group_isr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_test_timer_group_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@alarm_flag = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"This is TG%d timer[%d] reload-timer alarm!\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"time: %.8f S\0A\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"This is TG%d timer[%d] count-up-timer alarm!\0A\00", align 1
@TIMER_SCALE = common dso_local global double 0.000000e+00, align 8
@.str.3 = private unnamed_addr constant [20 x i8] c"alarm_time: %.8f S\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_timer_group_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_timer_group_isr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca double, align 8
  %8 = alloca i64, align 8
  %9 = alloca double, align 8
  store i8* %0, i8** %2, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %3, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %4, align 4
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %5, align 4
  store i32 1, i32* @alarm_flag, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @timer_group_get_auto_reload_in_isr(i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %38

22:                                               ; preds = %1
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @timer_group_intr_clr_in_isr(i32 %23, i32 %24)
  %26 = load i32, i32* %4, align 4
  %27 = sitofp i32 %26 to double
  %28 = load i32, i32* %5, align 4
  %29 = call i32 (i8*, double, ...) @ets_printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), double %27, i32 %28)
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @timer_get_counter_value(i32 %30, i32 %31, i64* %6)
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @timer_get_counter_time_sec(i32 %33, i32 %34, double* %7)
  %36 = load double, double* %7, align 8
  %37 = call i32 (i8*, double, ...) @ets_printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), double %36)
  br label %63

38:                                               ; preds = %1
  %39 = load i32, i32* %4, align 4
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @timer_group_intr_clr_in_isr(i32 %39, i32 %40)
  %42 = load i32, i32* %4, align 4
  %43 = sitofp i32 %42 to double
  %44 = load i32, i32* %5, align 4
  %45 = call i32 (i8*, double, ...) @ets_printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), double %43, i32 %44)
  %46 = load i32, i32* %4, align 4
  %47 = load i32, i32* %5, align 4
  %48 = call i32 @timer_get_counter_value(i32 %46, i32 %47, i64* %6)
  %49 = load i32, i32* %4, align 4
  %50 = load i32, i32* %5, align 4
  %51 = call i32 @timer_get_counter_time_sec(i32 %49, i32 %50, double* %7)
  %52 = load i32, i32* %4, align 4
  %53 = load i32, i32* %5, align 4
  %54 = call i32 @timer_get_alarm_value(i32 %52, i32 %53, i64* %8)
  %55 = load double, double* %7, align 8
  %56 = call i32 (i8*, double, ...) @ets_printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), double %55)
  %57 = load i64, i64* %8, align 8
  %58 = sitofp i64 %57 to double
  %59 = load double, double* @TIMER_SCALE, align 8
  %60 = fdiv double %58, %59
  store double %60, double* %9, align 8
  %61 = load double, double* %9, align 8
  %62 = call i32 (i8*, double, ...) @ets_printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), double %61)
  br label %63

63:                                               ; preds = %38, %22
  ret void
}

declare dso_local i64 @timer_group_get_auto_reload_in_isr(i32, i32) #1

declare dso_local i32 @timer_group_intr_clr_in_isr(i32, i32) #1

declare dso_local i32 @ets_printf(i8*, double, ...) #1

declare dso_local i32 @timer_get_counter_value(i32, i32, i64*) #1

declare dso_local i32 @timer_get_counter_time_sec(i32, i32, double*) #1

declare dso_local i32 @timer_get_alarm_value(i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
